Fix layout issues and refactor code

--- a/client/src/components/Application.scss
+++ b/client/src/components/Application.scss
@@ -8,8 +8,8 @@
 //  justify-content: flex-start;
  // padding: 0 $spacing;
   width: 100%;
-  //height: 100vh;
-  border: 5px solid #03A9F4;
+  height: 100%;
+
 
 }
 
